# credit-risk-prediction

./: .gitignore  LICENSE  Makefile  README.md  RULES.md  UPGRADE.md  app.py  pyproject.toml  requirements.txt  skay_banking_dark.json.txt  skay_banking_premium_dark.json
.streamlit/: config.toml
configs/: feature_groups.yaml  feature_sources.yaml  model.yaml  paths.yaml
data/outputs/models/: credit_risk_pipeline_champion.joblib  model_metadata_20260204_082916.json  model_metadata_20260204_082947.json  model_metadata_20260204_101201.json  model_metadata_20260204_101459.json  model_metadata_20260613_092427.json  model_metadata_20260613_095649.json
data/outputs/predictions/: correlation_top.csv  decision_simulation.csv  feature_summary.csv  kpi_overview.csv  missingness_by_feature.csv  population_segments.csv  scenario_results.csv
data/outputs/reports/: calibration_bins.csv  calibration_curve.csv  calibration_metrics.csv  confusion_matrix.csv  data_shape.txt  dtypes.csv  feature_importance_shap.csv  metrics_baseline.csv  metrics_champion.csv  metrics_compare.csv  missingness.csv  target_stats.csv  tuning_results.csv
src/credit_risk/: cli.py  config.py
src/credit_risk/data/: __init__.py  ingest.py
src/credit_risk/features/: __init__.py  dashboard_tables.py  groups.py  relational.py  summary.py
src/credit_risk/modeling/: __init__.py  calibrate.py  pipeline.py  scenarios.py  (+3 more)
tests/: test_calibrate.py  test_model_config_validation.py  test_pipeline_fallback.py  test_pipeline_params.py  test_relational.py  test_simulate_validation.py  test_train_fallback.py
